# woninet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  arguments.py  build.sh  documentation.md  logger.py  main.py  pyproject.toml  requirements.txt  scan.py  serve.py  uninstall.sh
core/: alerts.py  storage.py
docs/: core_logic.md  documentation.md  usage.md  versioning.md  web_dashboard.md
pymonitor/: __init__.py  main.py
pymonitor/core/: collectors.py
pymonitor/utilities/: arguments.py
static-files/: app.js  index.html  style.css
utilities/: arguments.py  logger.py  validate_ip.py  version.py
woninet/: __init__.py  logging.yaml  main.py
woninet/core/: alerts.py  collectors.py  engine.py  graph.py  manual_ip_enumerator.py  models.py  storage.py  subnet_enumerator.py
woninet/database/: __init__.py  base.py  engine.py  tables.py
woninet/database/repositories/: __init__.py  alert_event_repository.py  alert_state_repository.py  device_repository.py  metric_repository.py
woninet/server/: app.py  dependencies.py
woninet/server/routes/: __init__.py  devices.py  stats.py  system.py
woninet/server/services/: device_service.py  stats_service.py
woninet/server/static/css/: 404.css  style.css
woninet/server/static/js/: app.js  device_info.js
woninet/server/templates/: 404.html  dashboard.html  device_info.html
woninet/utilities/: arguments.py  cli_parser.py  detect_ip_range.py  ip_validator.py  logger.py
